# lorenz-sw-chaos

./: .gitignore  Makefile  README.md  environment.yml  lorenz-sw-sde-handoff.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  docs.yml
docs/: chaos_model_details.md  claim_figure_notes.md  deployment.md  example_forecast.md  figure_notes.md  index.md  math_description.md  portability.md  profile_figures.md  references.md  repository_metadata.md  source_terms.md  space_weather_context.md  usage.md
docs/assets/figures/: fig1_swmi_schematic.tif
docs/javascripts/: mathjax.js
docs/stylesheets/: extra.css
scripts/: _source_term_plot_utils.py  diagnose_lyapunov_separation.py  generate_all_figures.py  generate_claim_figures.py  plot_chapman_precip_two_panel.py  plot_electron_density_profiles.py  plot_future_uncertainty_forecast.py  plot_photoionization_term.py  plot_precipitation_term.py
src/lorenzsw/: __init__.py  _logging.py  chapman.py  continuity.py  ensemble.py  figure1.m  figure1_magnetotail_reference.m  figure1_schematic.m  lyapunov.py  model_params.json  model_params.py  plotting.py  precipitation.py  scenarios.py  sde.py  transfer_operator.py
src/lorenzsw/figures/: __init__.py  fig1_swmi_schematic.py  fig2_sde_ensemble.py  fig3_transfer_operator.py  fig4_exceedance.py
src/lorenzsw/forcing/: __init__.py  adapters.py  lorenz_precip.py  omni_loader.py  soc_flare.py
tests/: test_chapman.py  test_continuity.py  test_ensemble.py  test_forcing.py  test_lyapunov.py  test_omni_loader.py  test_precipitation.py  test_sde.py  test_transfer_operator.py
